--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@ header{
     background-color: ivory;
     height: 100px;
     border: 2px solid rgb(209, 114, 130);
+    border-radius: 8px;
+     
 }
 
 h1{
@@ -45,6 +47,7 @@ nav li a{
     text-shadow: 2px 2px 1px black;
 }
 
+
 main{
     width: 960px;
     margin: 30px auto;
@@ -71,4 +74,7 @@ p{
 
 h2{
     font-size: 35px;
+}
+footer{
+    position: fixed;
 }
