--- a/petofthemonth.css
+++ b/petofthemonth.css
@@ -52,6 +52,12 @@ body{
        min-height: 70px;
    }
    .image{
-       width: 350px;
-       height: 350px;
+       width: 500px;
+       height: 500px;
    } 
+
+   p{
+    text-align: center;
+    margin-top: 30px;
+    font-size: 30px;
+}
