--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ a{
 header{
     background-color: ivory;
     height: 100px;
-    border: 2px solid rgb(209, 114, 130);
+    border: 6px solid rgb(245, 135, 153);
     border-radius: 8px;
      
 }
@@ -70,11 +70,13 @@ p{
     width: 200px;
     height: 200px;
     float: left;
+    border: 4px solid rgb(245, 135, 153);
+    border-radius: 6px;
 }
 
 h2{
     font-size: 35px;
 }
 footer{
-    position: fixed;
+ 
 }
