--- a/petofthemonth.css
+++ b/petofthemonth.css
@@ -17,7 +17,7 @@ body{
    header{
        background-color: ivory;
        height: 100px;
-       border: 2px solid rgb(209, 114, 130);
+       border: 2px solid rgb(245, 135, 153);
        border-radius: 8px;
    }
    
@@ -55,6 +55,8 @@ body{
        margin: auto;
        width: 500px;
        height: 500px;
+       border: 4px solid rgb(245, 135, 153);
+       border-radius: 6px;
    } 
 
    p{
