--- a/petofthemonth.css
+++ b/petofthemonth.css
@@ -6,8 +6,8 @@ body{
    }
    
    ul{
-       padding: 0;
-       margin: 0;
+    padding: 0;
+    margin: 0;
    }
    
    a{
@@ -38,7 +38,7 @@ body{
    
    
    nav li a{
-       float: left;
+       float: right;
        color: rgb(167, 238, 238);
        font-size: 20px;
        cursor: pointer;
@@ -52,7 +52,6 @@ body{
        min-height: 70px;
    }
    .image{
-       margin: auto;
        width: 500px;
        height: 500px;
        border: 4px solid rgb(245, 135, 153);
@@ -61,6 +60,6 @@ body{
 
    p{
     text-align: center;
-    margin-top: 30px;
+    margin: 0px;
     font-size: 30px;
 }
