--- a/petofthemonth.css
+++ b/petofthemonth.css
@@ -13,53 +13,64 @@ body{
    a{
        text-decoration: none;
    }
-   
+
    header{
        background-color: ivory;
        height: 100px;
-       border: 2px solid rgb(245, 135, 153);
+       border: 6px solid rgb(245, 135, 153);
        border-radius: 8px;
    }
    
    h1{
-       text-align: center;
+       float: left;
        margin-left: 50px;
        margin-right: 30px;
        color: rgb(167, 238, 238);
        text-shadow: 2px 2px 1px black;
    }
    nav{
-       margin-top: 50px;
+       margin: 35px;
    }
    
    nav li{
        display: inline-block;
    }
-   
-   
+
    nav li a{
-       float: right;
        color: rgb(167, 238, 238);
        font-size: 20px;
        cursor: pointer;
-       margin-right: 50px;
+       margin: 50px;
        text-shadow: 2px 2px 1px black;
    }
-   
    main{
        width: 960px;
        margin: 30px auto;
        min-height: 70px;
    }
-   .image{
-       width: 500px;
-       height: 500px;
-       border: 4px solid rgb(245, 135, 153);
-       border-radius: 6px;
-   } 
+
+   main li{
+    float: left;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    list-style: none;
+    }
+
 
    p{
     text-align: center;
-    margin: 0px;
+    margin-top: 100px;
     font-size: 30px;
-}
+    }
+
+   .Bunny{
+       width: 200px;
+       height: 200px;
+       float: left;
+       border: 4px solid rgb(245, 135, 153);
+       border-radius: 6px;
+   }
+
+    h2{
+        font-size: 35px;
+    }
