--- a/style.css
+++ b/style.css
@@ -4,12 +4,10 @@ body{
  margin: 0;
  padding: 0;
 }
-
 ul{
     padding: 0;
     margin: 0;
 }
-
 a{
     text-decoration: none;
 }
@@ -30,7 +28,7 @@ h1{
     text-shadow: 2px 2px 1px black;
 }
 nav{
-    margin-top: 50px;
+    margin: 35px;
 }
 
 nav li{
@@ -39,11 +37,10 @@ nav li{
 
 
 nav li a{
-    float: left;
     color: rgb(167, 238, 238);
     font-size: 20px;
     cursor: pointer;
-    margin-right: 50px;
+    margin: 50px;
     text-shadow: 2px 2px 1px black;
 }
 
