--- a/style.css
+++ b/style.css
@@ -71,6 +71,13 @@ p{
     border-radius: 6px;
 }
 
+#greeting{
+    width: 300px;
+    background-color: ivory;
+    border: 4px solid rgb(245, 135, 153);
+    border-radius: 6px;
+}
+
 h2{
     font-size: 35px;
 }
