--- a/style.css
+++ b/style.css
@@ -50,11 +50,30 @@ main{
     margin: 30px auto;
     min-height: 70px;
 }
+
 main li{
     float: left;
     margin-right: 30px;
     margin-bottom: 30px;
     list-style: none;
+}
+
+button{
+    font-family: helvetica;
+    text-decoration-color: aquamarine;
+    background-color: ivory;
+    border-radius: 8px;
+}
+
+
+#demo{
+margin-top: 20px;    
+font-family: Helvetica;    
+background-color: ivory;    
+border:4px solid rgb(245, 135, 153);
+border-radius: 8px;
+height: 20px;
+width: 600px;
 }
 
 p{
@@ -72,7 +91,7 @@ p{
 }
 
 #greeting{
-    width: 300px;
+    width: 400px;
     background-color: ivory;
     border: 4px solid rgb(245, 135, 153);
     border-radius: 6px;
